    if an output file was seekable.
  o Fixed a bug in the mask effect introduced in 12.17.  If the libc
    version of rand() returned more then 15-bit values then it would
    trash your data.  Reported by Friedhel Mehnert.
  o Added a new fade in/out effect from Ari Moisio.
  o AIFF files now ignore a MARK chunk if the loop type is NoLoop (0).

sox-12.17
---------
  o Sox can now read and write w98 compatible gsm .wav files,
    if compiled properly with libgsm.  Thanks go to Stuart
    Daines <sjd.u-net.com> for the gsm-wav patches.
    This is new, and relatively untested. See -g format option.
  o Sox can now write IMA_ADPCM and ADPCM compressed .wav,
    this is new, and relatively untested. See -i and -a format
    options in manpage.
  o General changes to wav.c for writing additional wav formats.
    Reading wave headers: more consistency checks.
    Writing wave headers: fixes for w98.
  o Speedups to adpcm read routines, new codex versions are
    now in ima_rw.c and adpcm.c.
  o Speedups for raw.c, especially for gcc with glibc.
  o Fixed a segfault problem with ulaw/alaw conversion, where
    an out-of-range index into the tables could occur.
  o More detailed output from the stat effect.
  o Continued rewrite of resample.c, now it is almost as
    fast with floating arithmetic as the old (buggy) version
    was with 16-bit integer arithmetic.  The older version
    in sox-12.16 shifted frequencies slightly and was less
    accurate.
  o Extensive rewrite of polyphas.c, should be faster and use
    less memory now.  The sox-12.16 polyphase code had some bugs.
  o New effect 'filter' which is a high-quality DSP lowpass/
    highpass/bandpass filter using windowed sinc function
    methods, like polyphase and resample.
  o Jan Paul Schmidt added new low/high/bandpass and bandlimit
    filters to sox.  They have much better results then the old
    versions of low/high/bandpass.  The new effects are all
    Butterworth filters.