@@ -13,6 +13,7 @@ sox-12.18
     trash your data.  Reported by Friedhel Mehnert.
   o Added a new fade in/out effect from Ari Moisio.
   o AIFF files now ignore a MARK chunk if the loop type is NoLoop (0).
+  o Fixed bug were it was impossible to output ADPCM data in wav files.
 
 sox-12.17
 ---------
